Set default WebsiteDataStore storage quota based on StorageQuotaManager https://bugs.webkit.org/show_bug.cgi?id=198133 <rdar://problem/51031436>

Reviewed by Geoffrey Garen.

Source/WebKit:

* UIProcess/WebsiteData/WebsiteDataStoreConfiguration.h:

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/StorageQuota.mm:
(doTest):


Canonical link: https://commits.webkit.org/212247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245698 268f45cc-cd09-0410-ab3c-d52691b4dbfc